<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PrinterApp</string>
    <string name="title_item_detail">Item Detail</string>
    
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
    
    <string name="fragment_devices">Devices</string>
    <string name="fragment_print">Print panel</string>
    <string name="fragment_models">Models</string>
    <string name="fragment_history">History</string>
    <string name="fragment_settings">Settings</string>
    <string name="fragment_detail_printer">Detail printer</string>
    <string name="fragment_detail_view">Detail view</string>
    
    
    <string name="devices_quickprint">&#9552;</string>
    <string name="devices_add_dialog_title">New printer detected</string>
    <string name="devices_add_dialog_message">Select a printer to add it to your panel</string>
    <string name="devices_filter_dialog_title">Show</string>
    <string name="devices_progress_dialog_title">Progress</string>
    <string name="devices_tabhost_tab_map">Map</string>
    <string name="devices_tabhost_tab_list">List</string>
    <string name="devices_error_dialog_title">Error message</string>
    <string name="devices_setup_title">Set up printer </string>
    <string name="devices_setup_message">Insert printer code or scan the QR located in the back of your device</string>
    <string name="devices_dialog_loading">Error while loading file: </string>
    <string name="devices_list_header_1">DEVICES</string>
    <string name="devices_list_header_2">STATUS</string>
   
    <string name="devices_command_waiting">Connecting to server</string>
    <string name="devices_upload_waiting">Uploading file&#8230;</string>
    <string name="devices_text_loading">Uploading&#8230;</string>
    <string name="devices_text_connecting">Connecting&#8230;</string>
    <string name="devices_text_completed">Finished</string>
    <string name="devices_text_paused">Paused</string>
    
    <string name="devices_menu_add">Add printer</string>
    <string name="devices_menu_filter">Filter devices</string>
    <string name="devices_cab_menu_delete">Delete printer</string>
    <string name="devices_cab_menu_settings">Printer settings</string>
    
    <string name="devices_filter_dialog_all">All</string>
    <string name="devices_filter_dialog_progress">In progress printers</string>
    <string name="devices_filter_dialog_inactive">Available printers</string>
    <string name="devices_filter_dialog_groups">As groups</string>
    <string name="devices_filter_dialog_linked">Only linked printers</string>
    
    <string name="devices_toast_no_stl">No .stl found</string>
    <string name="devices_toast_no_gcode">No .gcode found</string>
    <string name="devices_toast_upload_1">Uploaded&#8230;</string>
    <string name="devices_toast_upload_2">Failure while uploading&#8230;</string>
    <string name="storage_toast_corrupted">File is corrupted</string>
    <string name="viewer_toast_not_available">This view is not available.</string>
    <string name="viewer_toast_not_available_2">This view is not available. Open a file first</string>
    
    <string name="slicing_title">Slicing done in </string>
    <string name="slicing_download">Download file into project folder?</string>
    <string name="finish_dialog_title">Print finished: </string>
    <string name="finish_dialog_text"> has been printed, make sure you remove the piece from the plate before printing a new one. Do you want to remove the file from the server?</string>
    <string name="finish_dialog_remove">Remove</string>
    <string name="finish_dialog_notremove">Don\'t remove</string>
    
    <string name="library_search_dialog_title">Search keyword</string>
    <string name="library_filter_dialog_show">Show everything</string>
    <string name="library_filter_dialog_gcode">Show GCODE files</string>
    <string name="library_filter_dialog_stl">Show STL files</string>
    <string name="library_filter_dialog_remove">Remove filters</string>
        
    <string name="library_create_dialog_title">Name new folder</string>
    <string name="library_select_printer_title">Select available printers</string>
    <string name="library_option_dialog_title">Model options</string>
    <string name="library_option_print">Send to printer</string>
    <string name="library_option_edit">Edit</string>
    <string name="library_option_move">Move</string>
    <string name="library_delete_dialog_title">Do you want to delete this file?</string>
    <string name="library_paste_toast">Select "Paste" in the menu</string>
    <string name="library_parent_folder">[Previous folder]</string>
    
    <string name="library_menu_search">Search model</string>
    <string name="library_menu_filter">Filter models</string>
    <string name="library_menu_list">View as list</string>
    <string name="library_menu_grid">View as grid</string>
    <string name="library_menu_add">Add model</string>
    <string name="library_menu_folder">Create new folder</string>
    <string name="library_menu_paste">Paste</string>
    
    <string name="library_tabhost_tab_all">All the models</string>
    <string name="library_tabhost_tab_local">Local</string>
    <string name="library_tabhost_tab_printer">Printer</string>
    <string name="library_tabhost_tab_memory">Witbox memory</string>
    <string name="library_tabhost_tab_usb">USB</string>
    <string name="library_tabhost_tab_favorites">Favorites</string>
    
    <string name="detailview_description">Description</string>
    <string name="detailview_notes">Comments</string>
    <string name="detailview_description_default">(No description)</string>
    <string name="detailview_notes_default">(No notes)</string>
    <string name="detailview_gcode">gcode</string>
    
    <string name="viewer_menu_open">Open file</string>
    <string name="viewer_menu_save">Save</string>
    <string name="viewer_menu_notes">Notes</string>
    <string name="viewer_menu_autofit">Autofit</string>
    <string name="viewer_menu_clean">Clean panel</string>
    
    <string name="settings_network">Default network</string>
    <string name="settings_printers">Linked Witbox/Witclon connections</string>
    <string name="settings_add_title">Discover printer(s)</string>
    <string name="settings_edit_name">Set printer new name</string>
    
    <string name="settings_tabhost_tab_connection">Connection and network</string>
    <string name="settings_tabhost_tab_devices">Devices</string>
    <string name="settings_tabhost_tab_users">Users</string>
    
    <string name="viewer_button_back">Back</string>
    <string name="viewer_button_right">Right</string>
    <string name="viewer_button_down">Down</string>
    <string name="viewer_button_left">Left</string>
    <string name="viewer_button_normal">Normal</string>
    <string name="viewer_button_overhang">Overhang</string>
    <string name="viewer_button_xray">Triangles</string>
    <string name="viewer_button_layers">Gcodes</string>
    <string name="viewer_button_transparent">Transparent</string>
    <string name="viewer_button_light">Light</string>
    <string name="viewer_button_rotation">Rotation</string>
    <string name="viewer_button_translation">Translation</string>
    <string name="viewer_button_rotate_positive_angle">+15º</string>
    <string name="viewer_button_rotate_negative_angle">-15º</string>   
    <string name="viewer_text_rx">X axis</string>
    <string name="viewer_text_ry">Y axis</string>
    <string name="viewer_text_rz">Z axis</string>
    
    
    <string name="choose_file">Choose File</string> 
	<string name="open">Open</string>  
    <string name="gcode_viewer">Gcode Files</string>
	<string name="close_browser">Close browser</string>
		   
    <string name="viewer_title">Print Panel</string>
    <string name="loading_stl">Loading STL file</string>
    <string name="loading_gcode">Loading GCode file</string>
    
    <string name="be_patient">Please, be patient. It may take a while</string>
    <string name="error_opening_invalid_file">Invalid file. Try again.</string>
    <string name="error_saving_invalid_model">Print Panel is empty. Open and edit a file and try again.</string>
         
    <string name="ok">OK</string>
    <string name="project_name">Please, insert a new name</string>
    <string name="proyect_name_not_available">That name exists! Please, choose another name</string>
    <string name="creating_project">Creating project &#8230;</string> 
    <string name="new_project">New project</string> 
    
    <string name="edition_menu_move">Move</string>
    <string name="edition_menu_rotate">Rotate</string>
    <string name="edition_menu_resize">Resize</string>
    <string name="edition_menu_mirror">Mirror</string>
    <string name="edition_menu_delete">Delete</string>
    <string name="edition_menu_multiply">Multiply</string>
    
    
</resources>
