<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
     <item
        android:id="@+id/library_search"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/library_menu_search"/>
      
    <item
        android:id="@+id/library_filter"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_labels"
        android:title="@string/library_menu_filter" />
    
    <item
        android:id="@+id/library_list"
        android:showAsAction="never"
        android:visible="false"
        android:title="@string/library_menu_list"/>
    
    <item
        android:id="@+id/library_add"
        android:showAsAction="never"
        android:title="@string/library_menu_add"/>
    
        <item
        android:id="@+id/library_create"
        android:showAsAction="never"
        android:title="@string/library_menu_folder"/>
        
        <item 
            android:id="@+id/library_paste"
            android:showAsAction="never"
            android:title="@string/library_menu_paste"/>
    

</menu>
