<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="309dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/detail_iv_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="0.6"
            android:src="@drawable/random" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="0.4"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/detail_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" 
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:id="@+id/ll_tv1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" 
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detail_tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:text="@string/detailview_description" />

                <TextView
                    android:id="@+id/detail_tv_description_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:text="@string/detailview_description_default" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_tv2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" 
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detail_tv_notes"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:text="@string/detailview_notes" />

                 <TextView
                     android:id="@+id/detail_tv_notes_text"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
                     android:text="@string/detailview_notes_default" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8" >

                <ImageButton
                    android:id="@+id/detail_ib_print"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@null"
                    android:src="@drawable/icon_print_pq" />

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@null"
                    android:src="@drawable/icon_share" />

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@null"
                    android:src="@drawable/icon_favorite" />

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@null"
                    android:src="@drawable/icon_notes" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/detail_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3" >
    </ListView>

</LinearLayout>